--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-globe.gl": "^2.27.6",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.5",
+    "three": "^0.171.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
