--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-globe.gl": "^2.27.6",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.13.3",
