--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.10",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.5",
     "three": "^0.171.0",
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
+    "@types/react-window": "^1.8.8",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
